[package]
name        = "marcopolo"
version     = "0.3.0"
edition     = "2021"
description = "Scrape any URL, grab any file — one command. Async CLI tool for hunting and bulk-downloading PDFs, images, videos, source code, and more from GitHub repos and websites."
readme      = "README.md"
license     = "MIT or Apache 2.0"
authors     = ["Marawan Yakout yakout@marawan.net"]
repository  = "https://github.com/MarawanYakout/MarcoPolo"
homepage    = "https://github.com/MarawanYakout/MarcoPolo"
keywords    = ["scraper", "downloader", "cli", "github", "crawler", "rust scraper"]
categories  = [
    "command-line-utilities",
    "web-programming",
    "network-programming",
]

[[bin]]
name = "marcopolo"
path = "src/main.rs"

[dependencies]
base64            = "0.22"
clap              = { version = "4",    features = ["derive"] }
colored           = "2"
futures           = "0.3"
indicatif         = "0.17"
percent-encoding  = "2"
regex             = "1"
reqwest           = { version = "0.12", features = ["json"] }
scraper           = "0.21"
serde             = { version = "1",    features = ["derive"] }
tokio             = { version = "1",    features = ["full"] }
url               = "2"
